# explode-view

./: LICENSE  README.md  setup.cfg
examples/: cells3d.py  coins.py
src/explode_view/: __init__.py  _explode_view.py  _widget.py
