[tool:pytest]
addopts = --doctest-modules  --ignore setup.py --ignore benchmarks/ --ignore test-environment.yml
; use "--cov-report term-missing --cov ." to also run coverage.
; remember to clear numba cache and disable Numba JIT for accurate coverage.
; use "make numba-clean" and "export NUMBA_DISABLE_JIT=1".
norecursedirs = doc

[metadata]
name = explode-view
version = 0.0.1
url = https://github.com/jni/explode-view
download_url = https://github.com/jni/explode-view
license = BSD 3-Clause
license_file = LICENSE
description = Show exploded view of a segmented image
long_description = file: README.md
long_description_content_type = text/markdown
author = Damian Dalle Nogare & Juan Nunez-Iglesias
author_email = juan.nunez-iglesias@monash.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
package_dir =
    =src
include_package_data = True
install_requires =
    numpy>=1.18
    scikit-image>=0.18


[options.packages.find]
where = src
